Frankbelford/uatv1ba/force-app/main/default/objects/Job_Order_Decline_Details__c/Job_Order_Decline_Details__c.object-meta.xml
<CustomObject>
    <label>Job Order Decline Details</label>
    <nameField>
        <displayFormat>JODD-{00000000}</displayFormat>
        <label>Job Order Decline Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Order Decline Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>