Frankbelford/uatv1ba/force-app/main/default/objects/Job_Order_Decline_Details__c/fields/Declined_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Declined_Date_Time__c</fullName>
    <label>Declined Date-Time</label>
    <type>DateTime</type>
</CustomField>