Frankbelford/uatv1ba/force-app/main/default/objects/Job_Order_Decline_Details__c/fields/Job_Order__c.field-meta.xml
<CustomField>
    <fullName>Job_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job Order</label>
    <referenceTo>sirenum__JobOrder__c</referenceTo>
    <relationshipLabel>Job Order Decline Details</relationshipLabel>
    <relationshipName>Job_Order_Decline_Details</relationshipName>
    <type>Lookup</type>
</CustomField>