Frankbelford/uatv1ba/force-app/main/default/objects/Job_Order_Decline_Details__c/fields/Supplier_Account__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Job Order Decline Details</relationshipLabel>
    <relationshipName>Job_Order_Decline_Details</relationshipName>
    <type>Lookup</type>
</CustomField>